<resources>
    <string name="app_name">Track My Location</string>

    <string name="rb_high">5 seconds, 1 meter displacement</string>
    <string name="rb_medium">5 minutes, 100 meters displacement</string>
    <string name="rb_medium_one">15 minutes, 100 meters displacement</string>
    <string name="rb_medium_two">30 minutes, 100 meters displacement</string>
    <string name="rb_low">1 hour, 500 meters displacement</string>
    <string name="title_activity_main">Location Tracking</string>
    <string name="title_activity_results">Tracking Results</string>

    <string name="action_map">Map</string>
    <string name="action_filter">Filter</string>
    <string name="btn_start_tracking">Start tracking</string>
    <string name="btn_stop_tracking">Stop tracking</string>

    <string name="one_week">1 week</string>
    <string name="one_day">24 hours</string>
    <string name="one_hour">1 hour</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_track_geo_fence">Track Geo Fence</string>

    <string name="action_add_geo_fence">Add Geo Fence</string>

</resources>
